fix form sections overflowing and replace install on gke page text

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -516,7 +516,7 @@ img {
     }
 }
 
-.get-in-touch-today {
+.contact .get-in-touch-today {
   min-height: calc(100vh - 120px);
   position: relative;
   .section {
@@ -526,6 +526,12 @@ img {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    @media screen and (max-height: 600px) { 
+      position: static;
+      left: auto;
+      top: auto;
+      transform: translate(0,0);
+    }
   }
 }
 
@@ -1356,12 +1362,14 @@ justify-content: space-between;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  @media screen and (max-width: 980px) {
+     max-width: 720px
+  }
   .step {
     flex-basis: calc(50% - 24px);
     margin-bottom: 48px;
-    @media screen and (max-width: 1100px) {
+    @media screen and (max-width: 980px) {
       flex-basis: 100%;
-      
     }
     img {
       width: 100%;
@@ -1376,12 +1384,26 @@ justify-content: space-between;
   display: inline-block;
 }
 
+
+.step.three p, .step.four p {
+  min-height: 78px
+}
+
+@media screen and (max-width: 1080px) {
+  .step.seven p, .step.eight p {
+    min-height: 78px
+  }
+}
+
 .steps p {
   margin: 20px 0;
   font-size: 18px;
   line-height: 26px;
-  width: 80%;
+  // width: 80%;
   min-height: 52px;
+  @media screen and (max-width: 980px) {
+    min-height: 0 !important;
+  }
 }
 
 .blue-circle {
@@ -1390,6 +1412,10 @@ justify-content: space-between;
   padding-left: 19px;
   width: 64px;
   border-radius: 100%;
+  @media screen and (max-width: 720px) {
+    padding: 8px 16px;
+    padding-left: 21px;
+  }
 }
 
 
